--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,120 @@
 * {
-    background-color: slategrey;
+    padding:0;
+    margin:0;
+    font-family: Arial, Helvetica, sans-serif;
+    /* background-color: slategrey; */
+}
+
+body {
+    
+    
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    min-height: 100vh;
+    width: 100vw;
+}
+
+header {
+    grid-row: 1;
+    grid-column: 1 / 13;
+    display: flex;
+    width: 100%;
+    background-color: cornflowerblue;
+}
+
+.content {
+    grid-row: 2 / 7;
+    grid-column: 1 / 13;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8, 1fr);
+
+}
+
+.sidebar {
+    grid-row: 1 / 9;
+    grid-column: 1 / 2;
+    display: grid;
+    background-color: darkgrey;
+    min-width: 200px;
+}
+
+.project-init-field {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+}
+
+#new-project {
+    width: 75%;
+}
+
+.todos {
+    background-color: rgb(255, 133, 133);
+    grid-row: 1 / 9;
+    grid-column: 2 / 9;
+
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    min-width: 600px;
+
+}
+
+.tasks {
+    display: grid;
+    grid-column: 4 / 8;
+    grid-row: 2 / 8;
+}
+
+.task {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    background-color: white;
+    border: 1px solid black;
+    align-content: center;
+
+}
+
+.task .task-name,
+.task .task-description,
+.task .task-dueDate,
+.task .task-priority,
+.task .deleteBtn {
+    align-content: center;
+    height:40px;
+
+}
+
+.task-name {
+    grid-column: 1 / 3;
+
+}
+
+.task-description {
+    grid-column: 3 / 6;
+
+}
+
+.task-dueDate {
+    grid-column: 6 / 8;
+
+}
+
+.task-priority {
+    grid-column: 8 / 10;
+
+}
+
+.deleteBtn {
+    align-self: center;
+    height: 75%!important;
+    border-radius: 5px;
+    grid-column: 10;
+
 }
