--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,11 @@ header {
 
 }
 
+#tasks-container {
+    grid-row: 1 / 3;
+    grid-column: 2 / 9;
+}
+
 .tasks {
     display: grid;
     grid-column: 4 / 8;
@@ -86,6 +91,7 @@ header {
     border: 1px solid black;
     border-radius: 50%;
 }
+
 
 .task {
     display: grid;
@@ -244,4 +250,5 @@ header {
 
 #api-testing-form {
     grid-column: 6 / 9;
+    grid-row: 2;
 }
