--- a/src/style.css
+++ b/src/style.css
@@ -85,13 +85,13 @@ header {
 }
 
 .tasks-header button {
-    width: 25px;
-    height: 25px;
-    /* padding: 5px; */
-    border: 1px solid black;
-    border-radius: 50%;
+    width: 100px;
 }
 
+#tasks-display {
+    display: grid;
+    gap: 5px;
+}
 
 .task {
     display: grid;
@@ -106,6 +106,7 @@ header {
 .task .task-description,
 .task .task-dueDate,
 .task .task-priority,
+.task .editBtn,
 .task .deleteBtn {
     align-content: center;
     height:40px;
@@ -123,13 +124,20 @@ header {
 }
 
 .task-dueDate {
-    grid-column: 6 / 8;
+    grid-column: 6 / 7;
 
 }
 
 .task-priority {
-    grid-column: 8 / 10;
+    grid-column: 7 / 9;
 
+}
+
+.editBtn {
+    align-self: center;
+    height: 75%!important;
+    border-radius: 5px;
+    grid-column: 9;
 }
 
 .deleteBtn {
@@ -250,5 +258,5 @@ header {
 
 #api-testing-form {
     grid-column: 6 / 9;
-    grid-row: 2;
+    grid-row: 3;
 }
