--- a/src/style.css
+++ b/src/style.css
@@ -256,15 +256,51 @@ header {
 } 
 
 
-#api-testing-form {
+/* #new-task-form {
     grid-column: 6 / 9;
     grid-row: 3;
+} */
+
+.no-form-display {
+    display: none!important;
 }
 
-.no-display {
-    display: none;
+.form-display {
+    display: flex; 
+    flex-direction: column; 
 }
 
-.display {
-    display: block;
+/* .new-task-form-container {
+} */
+
+.new-task-form-container-show,
+.edit-task-form-container-show {
+        display: none; 
+        opacity: 0; 
+        transition: opacity 0.3s ease; 
+        position: fixed; 
+        display: flex; 
+        opacity: 1; 
+        width: 100%; 
+        height: 100%; 
+        background: rgba(0, 0, 0, 0.6)!important; 
+        top: 0; 
+        left: 0; 
+        justify-content: center; 
+        align-items: center; 
 }
+
+.new-task-form,
+.edit-task-form { 
+    display: flex; 
+    flex-direction: column; 
+    background: #fff;
+    padding: 24px;
+    border-radius: 12px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.4);
+    width: 320px;
+    text-align: center;
+    opacity: 0;
+    transform: scale(0.8);
+    animation: fadeInUp 0.5s ease-out forwards;
+} 
