completed tasks move into completed task array and back when unchecked. Also change project name by clicking on name in task display area.

--- a/src/style.css
+++ b/src/style.css
@@ -149,6 +149,10 @@ header {
     height: 30px!important;
 }
 
+#tasks-title:hover {
+    cursor: pointer;
+}
+
 input[type="checkbox"] {
     align-self: center;
     height:20px;
