--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,10 @@
     font-family: Arial, Helvetica, sans-serif;
     /* background-color: slategrey; */
     --completed-fadeout-color: rgba(0, 0, 0, 0.3);
-}
+    --default-box-shadow:  rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    --hover-box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    --default-button-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}  
 
 .container {
     display: grid;
@@ -61,7 +64,7 @@ header {
     justify-content: space-between;
     min-height: 30px;
     align-items: center;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    box-shadow: var(--default-box-shadow);
 
 }
 
@@ -94,6 +97,8 @@ header {
     border: none;
     font-size: 18px;
     padding-left: 5px;
+    box-shadow: var(--default-button-shadow);
+
 }
 
 #project-init-field {
@@ -106,6 +111,7 @@ header {
     font-size: 1em;
     width: 20%;
     height: 30px;
+    box-shadow: var(--default-button-shadow);
 }
 
 #new-project-init-input:hover {
@@ -153,7 +159,7 @@ header {
 }
 
 #title-edit-icon {
-    height: 1.2em;
+    height: 1.4em;
     cursor: pointer;
     margin-left: 5px;
     margin-bottom: 2px;
@@ -163,6 +169,7 @@ header {
 
 #add-task {
     margin: 12px 0;
+    box-shadow: var(--default-button-shadow);
 }
 
 #tasks-display {
@@ -170,9 +177,6 @@ header {
     gap: 10px;
 }
 
-.taskExpand {
-    height:200px;
-}
 
 .task {
     display: grid;
@@ -182,13 +186,19 @@ header {
     border-radius: 8px;
     margin: 0 5px;
     padding: 0 5px;
+    height: auto;
     align-content: center;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    box-shadow: var(--default-button-shadow);
+    }
+    
+.taskExpand {
+    transition: height 1.0s ease;
+    height:200px!important;
 }
 
 .task:hover {
-    background-color: grey;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    background-color: lightgray;
+    box-shadow: var(--hover-box-shadow);
     cursor: pointer;
 }
 
@@ -199,15 +209,18 @@ header {
 }
 
 #tasks-title:hover {
-    cursor: pointer;
+    cursor:default;
 }
 
 input[type="checkbox"] {
+    justify-self: start;
     align-self: center;
-    height:20px;
+    height:30px!important;
+    
 }
 
-.task .task-name,
+
+
 .task .task-description,
 .task .task-dueDate,
 .task .task-priority,
@@ -238,8 +251,9 @@ input[type="checkbox"] {
 
 .task-name {
     grid-column: 2 / 4;
-    justify-content: center;
-    align-content: center;
+    display: flex;
+    /* justify-content: center; */
+    align-self: center;
 }
 
 .task-description {
